# espectre-sense

./: .gitignore  Cargo.toml  README.md
docker/: Dockerfile
firmware/esp32-csi-node/main/: csi_collector.c  csi_collector.h
firmware/prebuilt/: flash.sh
server/: Cargo.toml
server/models/: baseline.npy  feat_mean.npy  feat_std.npy
server/src/: dl_classifier.rs  espectre.rs  main.rs  trained_mlp.rs  vital_signs.rs
training/: .gitignore  csi_model.py  prepare_data.py  train_dl.py
training/models/: csi_cnn_light.pt  csi_cnn_light_meta.json  csi_cnn_lstm.pt  csi_cnn_lstm_meta.json
training/prepared/: baseline.npy  feat_std.npy
ui/: heatmap.html  sleep.html  train.html
