[workspace]
resolver = "2"
members = ["server", "wifiscan"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["outputlayer"]
license = "MIT"
repository = "https://github.com/outputlayer/espectre"
keywords = ["wifi", "csi", "presence-detection", "esp32", "room-monitoring"]
categories = ["science", "embedded"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws", "macros"] }
clap = { version = "4.4", features = ["derive", "env"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
